Fixed the content overflowing horizontally sometimes

--- a/style/main.css
+++ b/style/main.css
@@ -19,6 +19,8 @@ body
 	margin: 0;
 	padding: 0;
 	
+	overflow-x: hidden;
+	
 	-webkit-text-size-adjust: 100%;
 }
 
